@@ -1,5 +1,7 @@
 *SVN*
 
+* Added support for Model.all_by_XXX methods through Model.method_missing.
+
 * Added basic SQL logging to Database.
 
 * Added Enumerable#send_each convenience method.
